# stackexchange-agent

./: .dockerignore  .gitignore  .pre-commit-config  .pre-commit-config.yaml  README.md  docker-compose.yml  plan.excalidraw  pyproject.toml  run.sh
backend/: Dockerfile  requirements.txt
backend/agent/: agent.py  messages.py
backend/app/: backend.py
backend/middleware/: in_built.py  langchain_middleware.py  mermaid_middleware.py
backend/prompts/: router_prompts.py  st_overflow.py  system_prompts.py
backend/setup/: init.py  init_config.py
backend/setup/data/: neo4j_query_saved_cypher_2026-5-12.csv  neo4j_query_saved_cypher_2026-7-6.csv
backend/tools/: custom_tool.py  graph_rag_prompt.py  graph_rag_tool.py  router.py
backend/tools/auto/: graph_rag_tool.py
backend/tools/custom/: custom_tool.py  cypher_src.py
backend/utils/: db_functions.py  memory.py  topic_continuity.py  topic_manager.py  util.py
frontend/: Dockerfile  requirements.txt  web.py
frontend/pages/: dashboard.py  loader.py  neo4j_explorer.py
frontend/utils/: util.py
