[project]
name = "stackoverflow-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.26.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.20",
    "langchain-neo4j>=0.1.0",
    "langchain-ollama>=0.0.1",
    "neo4j>=5.17.0",
    "ollama>=0.6.1",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.2.0",
    "uvicorn[standard]==0.40.0",
]
