[project]
name = "stackoverflow-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.26.0",
    "httpx-sse>=0.4.3",
    "langchain>=0.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.20",
    "langchain-neo4j>=0.1.0",
    "langchain-ollama>=0.0.1",
    "mypy>=1.19.1",
    "neo4j>=5.17.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.6.0",
    "pyre-check>=0.9.21",
    "pyrefly>=0.49.0",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.2",
    "requests>=2.32.5",
    "sentence-transformers>=2.3.0",
    "st-pages>=1.0.1",
    "streamlit>=1.53.0",
    "streamlit-mermaid>=0.3.0",
    "streamlit-timeline>=0.0.2",
    "torch>=2.2.0",
    "uvicorn[standard]==0.40.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
