[project]
name = "stackexchange-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "langchain>=1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-neo4j>=0.9.0",
    "langchain-ollama>=1.1.0",
    "neo4j>=6.1.0",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "st-pages>=1.0.1",
    "streamlit>=1.56.0",
    "streamlit-timeline>=0.0.2",
    "torch>=2.11.0",
    "uvicorn[standard]>=0.44.0",
]
